# personate

./: LAYOUT.md  README.md  SETUP.md  TIPS.md  TODO.md  pyproject.toml  runagent.py
emoji_packs/: emojis.json  kaomoji.json
examples/: burger_swarm.py  imaginary_interpreter.py  low_level_rpg.py  revmira_chatbot_config.json  swarm_toxic_positivity.py
examples_config/: cinnamon.json  kasha.json  liliang.json  meimei.json  nox.json  revmira.json  swarm.json  zig.json
hackable_notebooks/: README.md
hackable_notebooks/agent_from_scratch/: dialogue_generator.py  discord_conversions.py  emojify.py  examples_to_try.ipynb  server.py
personate/: __init__.py  completions.py
personate/activators/: __init__.py  activators.py
personate/decos/: __init__.py  filter.py  slurs.py
personate/decos/translators/: images_translator.py  translator.py
personate/face/: __init__.py  face.py  face2.py
personate/memory/: memory.py
personate/meta/: __init__.py  from_json.py  improv_scenes.py  inbuilt_commands.py
personate/meta/abilities/: read.txt  research_info.txt  use_images.txt
personate/meta/icons/: dusk.py
personate/meta/standard/: agents.py
personate/meta/templates/: assistant.py  chatbot.py  custom.py  dm.py  entity.py  fictional_character.py  historical_person.py  reader.txt
personate/prompts/: frame.py  semantic_list.py
personate/swarm/: __init__.py  internal_message.py  swarm.py  swarm_prompt.py
personate/utils/: apis.py  commands.py  logger.py  ratelimit.py  recursive_pprint.py  username_generator.py  usernames.py
